[wechat-robot-seller_1.0.0.1 2020-06-28 张春生]
1.新功能:初始化项目

[wechat-robot-seller_1.0.0.1 2020-06-30 张春生]
1.新功能:the first version

[wechat-robot-seller_1.0.0.1 2020-07-01 张春生]
1.新功能:add multi group support

[wechat-robot-seller_1.0.0.1 2020-07-02 张春生]
1.新功能:add multi group support

--备注分类
1、新功能：
2、Bug:
3、需求变更：
4、重构：
5、merge:

--格式：
[wechat-robot-seller_1.0.0.1 2020-06-28 张春生]
版本号 日期 提交人
版本号：产品名 版本类型 主版本 辅版本 新功能版本 缺陷版本