@@ -1,0 +1,54 @@
+{
+  "name": "zhangchunsheng/wechat-robot-seller",
+  "type": "project",
+  "description": "wechat robot seller.",
+  "keywords": [
+    "robot",
+    "autoload"
+  ],
+  "homepage": "https://github.com/zhangchunsheng/wechat-robot-seller",
+  "license": "Apache-2.0",
+  "version": "v0.0.1",
+  "authors": [
+    {
+      "name": "Chunsheng Zhang",
+      "email": "zhangchunsheng423@gmail.com",
+      "homepage": "https://www.luomor.com/"
+    }
+  ],
+  "require": {
+    "php": "^7.4 || ^8.0",
+    "wechaty/php-wechaty": "^v0.0.2"
+  },
+  "require-dev": {
+
+  },
+  "config": {
+
+  },
+  "extra": {
+
+  },
+  "autoload": {
+    "psr-4": {
+
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "examples/"
+    }
+  },
+  "scripts": {
+
+  },
+  "support": {
+    "issues": "https://github.com/zhangchunsheng/wechat-robot-seller/issues"
+  },
+  "repositories": {
+    "packagist": {
+      "type": "composer",
+      "url": "https://mirrors.aliyun.com/composer/"
+    }
+  }
+}
