@@ -1,0 +1,57 @@
+<?php
+/**
+ * Created by PhpStorm.
+ * User: peterzhang
+ * Date: 2020/8/5
+ * Time: 4:53 PM
+ */
+use IO\Github\Wechaty\Puppet\FileBox\FileBox;
+use IO\Github\Wechaty\User\ContactSelf;
+use IO\Github\Wechaty\User\MiniProgram;
+use IO\Github\Wechaty\User\UrlLink;
+
+define("ROOT", dirname(__DIR__));
+// DEBUG should create dir use command sudo mkdir /var/log/wechaty && sudo chmod 777 /var/log/wechaty
+define("DEBUG", 1);
+
+function autoload($clazz) {
+    $file = str_replace('\\', '/', $clazz);
+    if(is_file(ROOT . "/src/$file.php")) {
+        require ROOT . "/src/$file.php";
+    }
+}
+
+spl_autoload_register("autoload");
+
+require ROOT . '/vendor/autoload.php';
+
+// change dir
+// \IO\Github\Wechaty\Util\Logger::$_LOGGER_DIR = "/tmp/";
+
+$token = getenv("WECHATY_PUPPET_HOSTIE_TOKEN");
+$endPoint = getenv("WECHATY_PUPPET_HOSTIE_ENDPOINT");
+$wechaty = \IO\Github\Wechaty\Wechaty::getInstance($token, $endPoint);
+$wechaty->onScan(function($qrcode, $status, $data) {
+    if($status == 3) {
+        echo "SCAN_STATUS_CONFIRMED\n";
+    } else {
+        $qr = \IO\Github\Wechaty\Util\QrcodeUtils::getQr($qrcode);
+        echo "$qr\n\nOnline Image: https://wechaty.github.io/qrcode/$qrcode\n";
+    }
+})->onLogin(function(ContactSelf $user) {
+    echo "login user id " . $user->getId() . "\n";
+    echo "login user name " . $user->getPayload()->name . "\n";
+})->onMessage(function(\IO\Github\Wechaty\User\Message $message) use ($wechaty) {
+    $name = $message->from()->getPayload()->name;
+    $text = $message->getPayload()->text;
+    echo "message from user name $name : $text\n";
+    if($text == "ding") {
+        $message->say("dong");
+    } else if($text == "_stop_") {
+        $wechaty->stop();
+    } else {
+        $message->say("hello $name from php-wechaty");
+    }
+})->onHeartBeat(function($data) use ($wechaty) {
+    echo $data . "\n";
+})->start();
